--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "globby": "^10.0.1",
         "koa": "^2.8.1",
         "think_lib": "^2.2.4",
-        "think_logger": "^2.0.4"
+        "think_loader": "^2.0.2",
+        "think_logger": "^2.0.6"
     },
     "maintainers": [
         {
