This is just an early version.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "koatty",
         "thinkkoa"
     ],
+    "engines": {
+        "node": ">10.0.0"
+    },
     "author": {
         "name": "richenlin",
         "email": "richenlin@gmail.com"
