--- a/package.json
+++ b/package.json
@@ -36,24 +36,29 @@
     "devDependencies": {
         "@types/co": "^4.6.2",
         "@types/koa": "^2.0.49",
-        "@types/lodash": "^4.14.137",
-        "@typescript-eslint/parser": "^2.0.0",
-        "eslint": "^6.2.1",
-        "eslint-config-alloy": "^2.0.5",
+        "@types/koa-router": "^7.0.42",
+        "@types/lodash": "^4.14.138",
+        "@typescript-eslint/parser": "^2.3.0",
+        "debug": "^4.1.1",
+        "eslint": "^6.4.0",
+        "eslint-config-alloy": "^3.0.0",
         "eslint-plugin-typescript": "^0.14.0",
         "reflect-metadata": "^0.1.13",
-        "ts-node": "^8.3.0",
-        "tslint": "^5.19.0",
+        "ts-node": "^8.4.1",
+        "tslint": "^5.20.0",
         "tslint-config-alloy": "^0.2.1",
-        "typescript": "^3.5.3"
+        "typescript": "^3.6.3"
     },
     "dependencies": {
         "co": "^4.6.0",
         "globby": "^10.0.1",
         "koa": "^2.8.1",
+        "koa-router": "^7.4.0",
         "think_lib": "^2.2.4",
-        "think_loader": "^2.0.2",
-        "think_logger": "^2.0.6"
+        "think_logger": "^2.0.6",
+        "think_payload": "^2.0.5",
+        "think_static": "^2.1.1",
+        "think_trace": "^2.1.0"
     },
     "maintainers": [
         {
