--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,9 @@
       "node_modules/@types"
       // "./typings/*"
     ] /* List of folders to include type definitions from. */,
-    "types": [] /* Type declaration files to be included in compilation. */,
+    "types": [
+      "node"
+    ] /* Type declaration files to be included in compilation. */,
     "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
     "resolveJsonModule": true,
     "esModuleInterop": true,
