--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "koatty",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "description": "A lightweight, scalable for agile development TypeScript web framework, based on koa2.",
     "scripts": {
         "test": "tslint 'src/**/*.ts'",
         "build": "tsc",
-        "prepublish": "npm test && npm run build"
+        "prepublishOnly": "npm test && npm run build"
     },
     "main": "./dist/index.js",
     "repository": {
