--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "koatty",
-    "version": "1.3.3",
-    "description": "A lightweight, scalable for agile development TypeScript web framework, based on koa2.",
+    "version": "1.3.8",
+    "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "test": "tslint 'src/**/*.ts'",
         "build": "tsc",
