--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "koatty",
-    "version": "1.3.8",
+    "version": "1.3.9",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "test": "tslint 'src/**/*.ts'",
-        "build": "tsc",
+        "build": "rm -rf ./dist && tsc",
         "prepublishOnly": "npm test && npm run build"
     },
     "main": "./dist/index.js",
