--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     },
     "homepage": "https://github.com/thinkkoa/koatty",
     "devDependencies": {
-        "@types/koa": "^2.0.51",
-        "@types/koa-router": "^7.0.42",
-        "@types/lodash": "^4.14.144",
-        "@types/node": "^12.11.2",
+        "@types/koa": "^2.x.x",
+        "@types/koa-router": "^7.x.x",
+        "@types/lodash": "^4.x.x",
+        "@types/node": "^12.x.x",
         "@typescript-eslint/parser": "^2.5.0",
         "@typescript-eslint/eslint-plugin": "^2.5.0",
         "eslint": "^6.5.1",
