--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.3.13",
+    "version": "1.3.14",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "test": "tslint 'src/**/*.ts'",
@@ -44,9 +44,7 @@
         "@typescript-eslint/parser": "^2.6.0",
         "eslint": "^6.6.0",
         "eslint-config-alloy": "^3.0.0",
-        "reflect-metadata": "^0.1.13",
         "ts-node": "^8.4.1",
-        "tslib": "^1.10.0",
         "tslint": "^5.20.0",
         "tslint-config-alloy": "^0.2.1",
         "typescript": "^3.6.4"
@@ -55,11 +53,13 @@
         "globby": "^10.0.1",
         "koa": "^2.11.0",
         "koa-router": "^7.4.0",
+        "reflect-metadata": "^0.1.13",
         "think_lib": "^2.2.4",
         "think_logger": "^2.1.0",
         "think_payload": "^2.1.1",
         "think_static": "^2.1.2",
-        "think_trace": "^2.1.2"
+        "think_trace": "^2.1.2",
+        "tslib": "^1.10.0"
     },
     "maintainers": [
         {
