--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.3.15",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
-        "test": "tslint 'src/**/*.ts'",
-        "build": "rm -rf ./dist && tsc",
-        "prepublishOnly": "npm test && npm run build"
+        "build": "trash ./dist && tsc",
+        "prepublishOnly": "npm test && npm run build",
+        "test": "tslint 'src/**/*.ts'"
     },
     "main": "./dist/index.js",
     "repository": {
@@ -44,6 +44,7 @@
         "@typescript-eslint/parser": "^2.6.0",
         "eslint": "^6.6.0",
         "eslint-config-alloy": "^3.0.0",
+        "trash-cli": "^3.0.0",
         "ts-node": "^8.4.1",
         "tslint": "^5.20.0",
         "tslint-config-alloy": "^0.2.1",
