--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.6.3",
+    "version": "1.6.4",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "trash ./dist && tsc",
@@ -36,10 +36,10 @@
     },
     "homepage": "https://github.com/thinkkoa/koatty",
     "devDependencies": {
-        "@types/koa": "^2.x.x",
-        "@types/koa-router": "^7.x.x",
-        "@types/lodash": "^4.x.x",
-        "@types/node": "^12.x.x",
+        "@types/koa": "^2.0.51",
+        "@types/koa-router": "^7.0.42",
+        "@types/lodash": "^4.14.144",
+        "@types/node": "^12.7.12",
         "@typescript-eslint/eslint-plugin": "^2.6.0",
         "@typescript-eslint/parser": "^2.6.0",
         "eslint": "^6.6.0",
