--- a/package.json
+++ b/package.json
@@ -36,17 +36,16 @@
     },
     "homepage": "https://github.com/thinkkoa/koatty",
     "devDependencies": {
-        "@types/koa": "^2.0.52",
-        "@types/koa-router": "^7.0.42",
-        "@types/lodash": "^4.14.146",
-        "@types/node": "^12.12.7",
-        "@typescript-eslint/eslint-plugin": "^2.7.0",
-        "@typescript-eslint/parser": "^2.7.0",
+        "@types/koa": "^2.x.x",
+        "@types/koa-router": "^7.x.x",
+        "@types/lodash": "^4.x.x",
+        "@types/node": "^12.x.x",
+        "@typescript-eslint/eslint-plugin": "^2.8.0",
+        "@typescript-eslint/parser": "^2.8.0",
         "eslint": "^6.6.0",
-        "eslint-config-alloy": "^3.0.0",
         "trash-cli": "^3.0.0",
-        "ts-node": "^8.5.0",
-        "tslint": "^5.20.0",
+        "ts-node": "^8.5.2",
+        "tslint": "^5.20.1",
         "tslint-config-alloy": "^0.2.1",
         "typescript": "^3.7.2"
     },
