--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.8.0",
+    "version": "1.8.1",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "trash ./dist && tsc",
@@ -44,15 +44,17 @@
         "@typescript-eslint/parser": "^2.8.0",
         "eslint": "^6.6.0",
         "trash-cli": "^3.0.0",
-        "ts-node": "^8.5.2",
+        "ts-node": "^8.5.3",
         "tslint": "^5.20.1",
         "tslint-config-alloy": "^0.2.1",
         "typescript": "^3.7.2"
     },
     "dependencies": {
+        "@types/node-schedule": "^1.2.4",
         "globby": "^10.0.1",
         "koa": "^2.11.0",
         "koa-router": "^7.4.0",
+        "node-schedule": "^1.3.2",
         "reflect-metadata": "^0.1.13",
         "think_lib": "^2.x.x",
         "think_logger": "^2.x.x",
