--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.9.0",
+    "version": "1.9.2",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "trash ./dist && tsc",
@@ -37,23 +37,23 @@
     "homepage": "https://github.com/thinkkoa/koatty",
     "devDependencies": {
         "@types/koa": "^2.x.x",
-        "@types/koa-router": "^7.x.x",
+        "@types/koa__router": "^8.0.2",
         "@types/lodash": "^4.x.x",
         "@types/node": "^12.x.x",
-        "@typescript-eslint/eslint-plugin": "^2.8.0",
-        "@typescript-eslint/parser": "^2.8.0",
+        "@types/node-schedule": "^1.2.4",
+        "@typescript-eslint/eslint-plugin": "^2.11.0",
+        "@typescript-eslint/parser": "^2.11.0",
         "eslint": "^6.6.0",
         "trash-cli": "^3.0.0",
-        "ts-node": "^8.5.3",
+        "ts-node": "^8.5.4",
         "tslint": "^5.20.1",
         "tslint-config-alloy": "^0.2.1",
-        "typescript": "^3.7.2"
+        "typescript": "^3.7.3"
     },
     "dependencies": {
-        "@types/node-schedule": "^1.2.4",
+        "@koa/router": "^8.0.5",
         "globby": "^10.0.1",
         "koa": "^2.11.0",
-        "koa-router": "^7.4.0",
         "node-schedule": "^1.3.2",
         "reflect-metadata": "^0.1.13",
         "think_lib": "^2.x.x",
