--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     },
     "dependencies": {
         "@koa/router": "^8.0.5",
+        "class-transformer": "^0.2.3",
+        "class-validator": "^0.11.0",
         "globby": "^10.0.1",
         "koa": "^2.11.0",
         "node-schedule": "^1.3.2",
