--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.12.6",
+    "version": "1.12.7",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "trash ./dist && tsc",
@@ -36,11 +36,11 @@
     },
     "homepage": "https://github.com/thinkkoa/koatty",
     "devDependencies": {
+        "@types/cron": "^1.x.x",
         "@types/koa": "^2.x.x",
-        "@types/koa__router": "^8.0.2",
+        "@types/koa__router": "^8.x.x",
         "@types/lodash": "^4.x.x",
         "@types/node": "^12.x.x",
-        "@types/node-schedule": "^1.3.0",
         "@typescript-eslint/eslint-plugin": "^2.13.0",
         "@typescript-eslint/parser": "^2.13.0",
         "eslint": "^6.8.0",
@@ -54,9 +54,9 @@
         "@koa/router": "^8.0.5",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.11.0",
+        "cron": "^1.7.2",
         "globby": "^10.0.1",
         "koa": "^2.11.0",
-        "node-schedule": "^1.3.2",
         "reflect-metadata": "^0.1.13",
         "think_lib": "^2.x.x",
         "think_logger": "^2.x.x",
