--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.12.10",
+    "version": "1.13.2",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "trash ./dist && tsc",
@@ -56,12 +56,12 @@
         "globby": "^10.0.1",
         "koa": "^2.11.0",
         "reflect-metadata": "^0.1.13",
-        "think_lib": "^2.x.x",
-        "think_logger": "^2.x.x",
-        "think_payload": "^2.x.x",
-        "think_static": "^2.x.x",
-        "think_trace": "^2.x.x",
-        "think_validtion": "^1.0.1",
+        "think_lib": "^2.2.13",
+        "think_logger": "^2.2.0",
+        "think_payload": "^2.1.1",
+        "think_static": "^2.1.2",
+        "think_trace": "^2.1.2",
+        "think_validtion": "^1.2.0",
         "tslib": "^1.10.0"
     },
     "maintainers": [
