--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.17.0",
+    "version": "1.17.7",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
@@ -53,6 +53,7 @@
     "dependencies": {
         "@koa/router": "^8.0.8",
         "cron": "^1.8.2",
+        "generic-pool": "^3.7.1",
         "globby": "^11.0.0",
         "koa": "^2.11.0",
         "reflect-metadata": "^0.1.13",
@@ -60,9 +61,9 @@
         "think_logger": "^2.2.4",
         "think_payload": "^2.2.1",
         "think_static": "^2.1.3",
-        "think_store": "^2.5.3",
+        "think_store": "^4.0.0",
         "think_trace": "^2.1.4",
-        "think_validtion": "^1.2.12",
+        "think_validtion": "^1.4.2",
         "tslib": "^1.11.1"
     },
     "maintainers": [
