--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.18.12",
+    "version": "1.20.3",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
@@ -39,30 +39,29 @@
         "@types/cron": "^1.x.x",
         "@types/koa": "^2.x.x",
         "@types/koa__router": "^8.x.x",
-        "@types/lodash": "^4.x.x",
         "@types/node": "^12.x.x",
-        "@typescript-eslint/eslint-plugin": "^2.23.0",
-        "@typescript-eslint/parser": "^2.23.0",
+        "@typescript-eslint/eslint-plugin": "^2.26.0",
+        "@typescript-eslint/parser": "^2.26.0",
         "del-cli": "^3.0.0",
         "eslint": "^6.8.0",
-        "ts-node": "^8.6.2",
+        "ts-node": "^8.8.1",
         "tslint": "^6.1.0",
         "tslint-config-alloy": "^0.2.1",
         "typescript": "^3.8.3"
     },
     "dependencies": {
-        "@koa/router": "^8.0.8",
+        "@koa/router": "^9.0.0",
         "cron": "^1.8.2",
         "globby": "^11.0.0",
         "koa": "^2.11.0",
         "reflect-metadata": "^0.1.13",
-        "think_lib": "^2.2.13",
+        "think_lib": "^2.5.2",
         "think_logger": "^2.2.4",
-        "think_payload": "^2.2.1",
+        "think_payload": "^2.3.0",
         "think_static": "^2.1.3",
-        "think_store": "^4.0.0",
-        "think_trace": "^2.1.4",
-        "think_validtion": "^1.6.0",
+        "think_store": "^4.0.6",
+        "think_trace": "^2.2.0",
+        "think_validtion": "1.6.2",
         "tslib": "^1.11.1"
     },
     "maintainers": [
