--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "1.20.3",
+    "version": "1.20.11",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
@@ -55,13 +55,13 @@
         "globby": "^11.0.0",
         "koa": "^2.11.0",
         "reflect-metadata": "^0.1.13",
-        "think_lib": "^2.5.2",
-        "think_logger": "^2.2.4",
-        "think_payload": "^2.3.0",
-        "think_static": "^2.1.3",
-        "think_store": "^4.0.6",
-        "think_trace": "^2.2.0",
-        "think_validtion": "1.6.2",
+        "think_lib": "^2.x.x",
+        "think_logger": "^2.x.x",
+        "think_payload": "^2.x.x",
+        "think_static": "^2.x.x",
+        "think_store": "^4.x.x",
+        "think_trace": "^2.x.x",
+        "think_validtion": "^1.x.x",
         "tslib": "^1.11.1"
     },
     "maintainers": [
