--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "koatty",
-    "version": "1.21.2",
+    "version": "1.22.1",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
-        "prepublishOnly": "npm test && npm run build",
+        "prepublishOnly": "npm test",
         "test": "tslint 'src/**/*.ts'"
     },
     "main": "./dist/index.js",
@@ -41,16 +41,16 @@
         "@types/koa__router": "^8.x.x",
         "@types/node": "^12.x.x",
         "del-cli": "^3.0.0",
-        "ts-node": "^8.9.0",
-        "tslint": "^6.1.1",
+        "ts-node": "^8.10.1",
+        "tslint": "^6.1.2",
         "tslint-config-alloy": "^0.2.1",
-        "typescript": "^3.8.3"
+        "typescript": "^3.9.2"
     },
     "dependencies": {
         "@koa/router": "^8.0.8",
         "cron": "^1.8.2",
         "globby": "^11.0.0",
-        "koa": "^2.11.0",
+        "koa": "^2.12.0",
         "reflect-metadata": "^0.1.13",
         "think_lib": "^2.x.x",
         "think_logger": "^2.x.x",
@@ -58,7 +58,7 @@
         "think_store": "^4.x.x",
         "think_trace": "^2.x.x",
         "think_validtion": "^1.x.x",
-        "tslib": "^1.11.1"
+        "tslib": "^2.0.0"
     },
     "maintainers": [
         {
