--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "koatty",
-    "version": "2.3.5",
-    "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection just like SpringBoot.",
+    "version": "2.4.0",
+    "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
         "prepublishOnly": "npm test && npm run build",
@@ -50,6 +50,7 @@
         "globby": "^11.0.1",
         "koa": "^2.13.0",
         "reflect-metadata": "^0.1.13",
+        "think_cacheable": "1.0.0",
         "think_container": "^1.1.2",
         "think_lib": "^2.6.0",
         "think_logger": "^2.2.4",
