--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "2.6.5",
+    "version": "2.6.8",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
@@ -52,18 +52,18 @@
         "typescript": "^4.0.5"
     },
     "dependencies": {
-        "@koa/router": "^9.4.0",
+        "@koa/router": "^10.0.0",
         "globby": "^11.0.1",
         "koa": "^2.13.0",
-        "koatty_cacheable": "^1.1.1",
-        "koatty_container": "^1.1.3",
-        "koatty_schedule": "^1.1.2",
-        "koatty_validtion": "^1.8.2",
+        "koatty_cacheable": "^1.x.x",
+        "koatty_container": "^1.x.x",
+        "koatty_schedule": "^1.x.x",
+        "koatty_validtion": "^1.x.x",
         "reflect-metadata": "^0.1.13",
-        "think_lib": "^2.6.3",
-        "think_logger": "^2.6.0",
-        "think_payload": "^3.1.0",
-        "think_trace": "^3.3.3",
+        "think_lib": "^2.x.x",
+        "think_logger": "^2.x.x",
+        "think_payload": "^3.x.x",
+        "think_trace": "^3.x.x",
         "tslib": "^2.0.3"
     }
 }
