--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         }
     ],
     "devDependencies": {
+        "@types/cls-hooked": "^4.3.1",
         "@types/koa": "^2.x.x",
         "@types/koa__router": "^8.x.x",
         "@types/node": "^12.x.x",
@@ -53,17 +54,18 @@
     },
     "dependencies": {
         "@koa/router": "^10.0.0",
+        "cls-hooked": "^4.2.2",
         "globby": "^11.0.1",
         "koa": "^2.13.0",
         "koatty_cacheable": "^1.x.x",
         "koatty_container": "^1.x.x",
-        "koatty_schedule": "^1.x.x",
-        "koatty_validtion": "^1.x.x",
-        "reflect-metadata": "^0.1.13",
         "koatty_lib": "^1.x.x",
         "koatty_logger": "^1.x.x",
-        "think_payload": "^3.x.x",
+        "koatty_schedule": "^1.x.x",
         "koatty_trace": "^1.x.x",
+        "koatty_validtion": "^1.x.x",
+        "reflect-metadata": "^0.1.13",
+        "think_payload": "^3.x.x",
         "tslib": "^2.0.3"
     }
 }
