--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "ts-node": "^9.0.0",
         "tslint": "^6.1.3",
         "tslint-config-alloy": "^0.2.1",
-        "typescript": "^4.0.5"
+        "typescript": "^4.1.2"
     },
     "dependencies": {
         "@koa/router": "^10.0.0",
@@ -61,11 +61,11 @@
         "koatty_container": "^1.x.x",
         "koatty_lib": "^1.x.x",
         "koatty_logger": "^1.x.x",
+        "koatty_payload": "^1.x.x",
         "koatty_schedule": "^1.x.x",
         "koatty_trace": "^1.x.x",
         "koatty_validtion": "^1.x.x",
         "reflect-metadata": "^0.1.13",
-        "think_payload": "^3.x.x",
         "tslib": "^2.0.3"
     }
 }
