--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "2.6.8",
+    "version": "3.0.0",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
@@ -64,7 +64,7 @@
         "koatty_payload": "^1.x.x",
         "koatty_schedule": "^1.x.x",
         "koatty_trace": "^1.x.x",
-        "koatty_validtion": "^1.x.x",
+        "koatty_validation": "^1.x.x",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.0.3"
     }
