--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "@godaddy/terminus": "^4.5.0",
         "@koa/router": "^10.0.0",
         "cls-hooked": "^4.2.2",
         "globby": "^11.0.1",
