--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "name": "koatty",
-    "version": "3.2.7",
+    "version": "3.2.8",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
-        "prepublishOnly": "npm test && npm run build",
-        "test": "tslint 'src/**/*.ts'"
+        "eslint": "eslint --ext .ts,.js ./",
+        "prepublishOnly": "npm run eslint && npm test && npm run build",
+        "release": "standard-version",
+        "test": "tsc && jest",
+        "test:cov": "jest --collectCoverage --detectOpenHandles",
+        "version": "conventional-changelog -p angular -i CHANGELOG.md -s"
     },
     "main": "./dist/index.js",
     "repository": {
@@ -42,16 +46,25 @@
         }
     ],
     "devDependencies": {
+        "@commitlint/cli": "^12.1.4",
+        "@commitlint/config-conventional": "^12.1.4",
         "@types/cls-hooked": "^4.3.3",
         "@types/koa": "^2.x.x",
         "@types/koa__router": "^8.x.x",
         "@types/node": "^12.x.x",
+        "@typescript-eslint/eslint-plugin": "^4.x.x",
+        "@typescript-eslint/parser": "^4.x.x",
         "del-cli": "^3.0.1",
+        "eslint": "^7.x.x",
+        "eslint-plugin-jest": "^24.x.x",
+        "jest": "^27.x.x",
+        "jest-html-reporters": "^2.x.x",
         "koatty_cacheable": "^1.x.x",
         "koatty_schedule": "^1.x.x",
+        "prettier": "^2.x.x",
+        "standard-version": "^9.x.x",
+        "ts-jest": "^27.x.x",
         "ts-node": "^10.0.0",
-        "tslint": "^6.1.3",
-        "tslint-config-alloy": "^0.2.1",
         "typescript": "^4.3.4"
     },
     "dependencies": {
