--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
         "build": "del-cli --force dist && tsc",
         "eslint": "eslint --ext .ts,.js ./",
         "prepublishOnly": "npm test && npm run build",
-        "release": "standard-version",
-        "test": "npm run eslint && npm run build && jest",
+        "release": "npm run build && standard-version",
+        "test": "npm run eslint && jest --passWithNoTests",
         "test:cov": "jest --collectCoverage --detectOpenHandles",
-        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+        "version": "conventional-changelog -p angular -i CHANGELOG.md -s"
     },
     "main": "./dist/index.js",
     "repository": {
@@ -46,19 +46,23 @@
         }
     ],
     "devDependencies": {
-        "@commitlint/cli": "^12.1.4",
-        "@commitlint/config-conventional": "^12.1.4",
-        "@types/cls-hooked": "^4.3.3",
+        "@babel/core": "^7.x.x",
+        "@babel/plugin-proposal-decorators": "^7.x.x",
+        "@babel/preset-env": "^7.x.x",
+        "@babel/preset-typescript": "^7.x.x",
+        "@commitlint/cli": "^12.x.x",
+        "@commitlint/config-conventional": "^12.x.x",
+        "@types/cls-hooked": "^4.x.x",
         "@types/koa": "^2.x.x",
         "@types/koa__router": "^8.x.x",
         "@types/node": "^12.x.x",
         "@typescript-eslint/eslint-plugin": "^4.x.x",
         "@typescript-eslint/parser": "^4.x.x",
-        "conventional-changelog-cli": "^2.1.1",
+        "conventional-changelog-cli": "^2.x.x",
         "del-cli": "^3.x.x",
         "eslint": "^7.x.x",
         "eslint-plugin-jest": "^24.x.x",
-        "husky": "^6.0.0",
+        "husky": "^6.x.x",
         "jest": "^27.x.x",
         "jest-html-reporters": "^2.x.x",
         "koatty_cacheable": "^1.x.x",
@@ -74,12 +78,12 @@
         "cls-hooked": "^4.2.2",
         "globby": "^11.0.4",
         "koa": "^2.13.1",
-        "koatty_container": "^1.x.x",
-        "koatty_lib": "^1.x.x",
-        "koatty_logger": "^1.x.x",
-        "koatty_payload": "^1.x.x",
-        "koatty_static": "^1.x.x",
-        "koatty_validation": "^1.x.x",
+        "koatty_container": "^1.3.14",
+        "koatty_lib": "^1.2.5",
+        "koatty_logger": "^1.1.2",
+        "koatty_payload": "^1.2.5",
+        "koatty_static": "^1.2.5",
+        "koatty_validation": "^1.0.1",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.0"
     },
