--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,10 +58,10 @@
     "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ],
   "include": [
-    "src",
-    "src/**/*.json"
+    "src/**/*"
   ]
 }
