--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "@commitlint/config-conventional": "^12.x.x",
         "@types/cls-hooked": "^4.x.x",
         "@types/koa": "^2.x.x",
-        "@types/koa__router": "^8.x.x",
+        "@types/koa__router": "^8.0.4",
         "@types/node": "^12.x.x",
         "@typescript-eslint/eslint-plugin": "^4.x.x",
         "@typescript-eslint/parser": "^4.x.x",
@@ -73,17 +73,17 @@
         "typescript": "^4.3.4"
     },
     "dependencies": {
-        "@godaddy/terminus": "^4.9.0",
-        "@koa/router": "^10.0.0",
-        "cls-hooked": "^4.2.2",
         "globby": "^11.0.4",
         "koa": "^2.13.1",
-        "koatty_container": "^1.3.14",
+        "koatty_container": "^1.4.1",
         "koatty_lib": "^1.2.5",
         "koatty_logger": "^1.1.2",
         "koatty_payload": "^1.2.5",
+        "koatty_router": "^1.0.3",
+        "koatty_serve": "^1.0.2",
         "koatty_static": "^1.2.5",
-        "koatty_validation": "^1.0.1",
+        "koatty_trace": "^1.2.3",
+        "koatty_validation": "^1.0.2",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.0"
     },
