--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "jest": "^27.x.x",
         "jest-html-reporters": "^2.x.x",
         "koatty_cacheable": "^1.x.x",
-        "koatty_schedule": "^1.x.x",
+        "koatty_schedule": "^1.2.2",
         "standard-version": "^9.x.x",
         "ts-jest": "^27.x.x",
         "ts-node": "^10.0.0",
@@ -75,11 +75,11 @@
     "dependencies": {
         "globby": "^11.0.4",
         "koa": "^2.13.1",
-        "koatty_container": "^1.4.1",
+        "koatty_container": "^1.4.2",
         "koatty_lib": "^1.2.5",
         "koatty_logger": "^1.1.2",
         "koatty_payload": "^1.2.5",
-        "koatty_router": "^1.0.3",
+        "koatty_router": "^1.0.4",
         "koatty_serve": "^1.0.2",
         "koatty_static": "^1.2.5",
         "koatty_trace": "^1.2.3",
