--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "koatty",
-    "version": "3.3.0",
+    "version": "3.3.2",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
         "eslint": "eslint --ext .ts,.js ./",
         "prepublishOnly": "npm test && npm run build",
-        "release": "npm run build && standard-version -h",
+        "release": "npm run build && standard-version",
         "test": "npm run eslint && jest --passWithNoTests",
         "test:cov": "jest --collectCoverage --detectOpenHandles",
         "version": "conventional-changelog -p angular -i CHANGELOG.md -s"
@@ -54,7 +54,7 @@
         "@commitlint/config-conventional": "^12.x.x",
         "@types/cls-hooked": "^4.x.x",
         "@types/koa": "^2.x.x",
-        "@types/koa__router": "^8.0.4",
+        "@types/koa__router": "^8.x.x",
         "@types/node": "^12.x.x",
         "@typescript-eslint/eslint-plugin": "^4.x.x",
         "@typescript-eslint/parser": "^4.x.x",
@@ -65,8 +65,6 @@
         "husky": "^6.x.x",
         "jest": "^27.x.x",
         "jest-html-reporters": "^2.x.x",
-        "koatty_cacheable": "^1.x.x",
-        "koatty_schedule": "^1.2.2",
         "standard-version": "^9.x.x",
         "ts-jest": "^27.x.x",
         "ts-node": "^10.0.0",
@@ -81,9 +79,7 @@
         "koatty_payload": "^1.2.5",
         "koatty_router": "^1.0.5",
         "koatty_serve": "^1.0.3",
-        "koatty_static": "^1.2.5",
         "koatty_trace": "^1.2.5",
-        "koatty_validation": "^1.0.2",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.0"
     },
