--- a/package.json
+++ b/package.json
@@ -73,13 +73,14 @@
     "dependencies": {
         "globby": "^11.0.4",
         "koa": "^2.13.1",
-        "koatty_container": "^1.4.3",
+        "koatty_container": "^1.6.0",
+        "koatty_core": "^1.1.1",
         "koatty_lib": "^1.2.6",
         "koatty_logger": "^1.1.2",
-        "koatty_payload": "^1.2.5",
-        "koatty_router": "^1.0.6",
-        "koatty_serve": "^1.0.4",
-        "koatty_trace": "^1.2.8",
+        "koatty_payload": "^1.3.0",
+        "koatty_router": "^1.2.4",
+        "koatty_serve": "^1.0.6",
+        "koatty_trace": "^1.3.2",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.0"
     },
