--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koatty",
-    "version": "3.3.7",
+    "version": "3.3.8",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
     "scripts": {
         "build": "del-cli --force dist && tsc",
@@ -56,33 +56,33 @@
         "@types/koa": "^2.x.x",
         "@types/koa__router": "^8.x.x",
         "@types/node": "^12.x.x",
-        "@typescript-eslint/eslint-plugin": "^4.x.x",
-        "@typescript-eslint/parser": "^4.x.x",
+        "@typescript-eslint/eslint-plugin": "^5.3.0",
+        "@typescript-eslint/parser": "^5.3.0",
         "conventional-changelog-cli": "^2.x.x",
         "del-cli": "^3.x.x",
-        "eslint": "^7.x.x",
+        "eslint": "^8.2.0",
         "eslint-plugin-jest": "^24.x.x",
         "husky": "^6.x.x",
         "jest": "^27.x.x",
         "jest-html-reporters": "^2.x.x",
         "standard-version": "^9.x.x",
         "ts-jest": "^27.x.x",
-        "ts-node": "^10.0.0",
-        "typescript": "^4.3.4"
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4"
     },
     "dependencies": {
         "globby": "^11.0.4",
-        "koa": "^2.13.1",
+        "koa": "^2.13.4",
         "koatty_container": "^1.6.0",
-        "koatty_core": "^1.1.2",
+        "koatty_core": "^1.2.2",
         "koatty_lib": "^1.2.6",
         "koatty_logger": "^1.1.2",
-        "koatty_payload": "^1.3.0",
-        "koatty_router": "^1.3.0",
-        "koatty_serve": "^1.0.6",
+        "koatty_payload": "^1.3.2",
+        "koatty_router": "^1.4.2",
+        "koatty_serve": "^1.2.3",
         "koatty_trace": "^1.3.2",
         "reflect-metadata": "^0.1.13",
-        "tslib": "^2.3.0"
+        "tslib": "^2.3.1"
     },
     "husky": {
         "hooks": {
