--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "build": "del-cli --force dist && tsc",
         "eslint": "eslint --ext .ts,.js ./",
         "prepublishOnly": "npm test && npm run build",
-        "release": "npm run build && standard-version",
+        "release": "npm run prepublishOnly && standard-version",
+        "pub": "git push --follow-tags origin main && npm publish",
         "test": "npm run eslint && jest --passWithNoTests",
         "test:cov": "jest --collectCoverage --detectOpenHandles",
         "version": "conventional-changelog -p angular -i CHANGELOG.md -s"
@@ -34,7 +35,7 @@
         "name": "richenlin",
         "email": "richenlin@gmail.com"
     },
-    "license": "BSD (3-Clause)",
+    "license": "BSD-3-Clause",
     "bugs": {
         "url": "https://github.com/thinkkoa/koatty/issues"
     },
@@ -51,38 +52,42 @@
         "@babel/preset-env": "^7.x.x",
         "@babel/preset-typescript": "^7.x.x",
         "@commitlint/cli": "^12.x.x",
-        "@commitlint/config-conventional": "^12.x.x",
-        "@types/cls-hooked": "^4.x.x",
+        "@commitlint/config-conventional": "^15.x.x",
+        "@types/jest": "^27.x.x",
         "@types/koa": "^2.x.x",
-        "@types/koa__router": "^8.x.x",
-        "@types/node": "^12.x.x",
-        "@typescript-eslint/eslint-plugin": "^5.3.0",
-        "@typescript-eslint/parser": "^5.3.0",
+        "@types/koa__router": "^8.0.9",
+        "@types/node": "^16.x.x",
+        "@types/uuid": "^8.3.3",
+        "@types/ws": "^8.2.0",
+        "@typescript-eslint/eslint-plugin": "^5.x.x",
+        "@typescript-eslint/parser": "^5.x.x",
         "conventional-changelog-cli": "^2.x.x",
-        "del-cli": "^3.x.x",
-        "eslint": "^8.2.0",
-        "eslint-plugin-jest": "^24.x.x",
-        "husky": "^6.x.x",
+        "del-cli": "^4.x.x",
+        "eslint": "^8.x.x",
+        "eslint-plugin-jest": "^25.x.x",
+        "husky": "^7.x.x",
         "jest": "^27.x.x",
         "jest-html-reporters": "^2.x.x",
         "standard-version": "^9.x.x",
         "ts-jest": "^27.x.x",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.4.4"
+        "ts-node": "^10.x.x",
+        "typescript": "^4.x.x"
     },
     "dependencies": {
         "globby": "^11.0.4",
         "koa": "^2.13.4",
         "koatty_container": "^1.6.0",
-        "koatty_core": "^1.2.2",
+        "koatty_core": "^1.3.30",
+        "koatty_exception": "^1.0.6",
         "koatty_lib": "^1.2.6",
         "koatty_logger": "^1.1.2",
-        "koatty_payload": "^1.3.2",
-        "koatty_router": "^1.4.2",
-        "koatty_serve": "^1.2.3",
-        "koatty_trace": "^1.3.2",
+        "koatty_payload": "^1.3.6",
+        "koatty_router": "^1.5.8",
+        "koatty_serve": "^1.3.8",
+        "koatty_trace": "^1.4.18",
         "reflect-metadata": "^0.1.13",
-        "tslib": "^2.3.1"
+        "tslib": "^2.3.1",
+        "uuid": "^8.3.2"
     },
     "husky": {
         "hooks": {
