--- a/package.json
+++ b/package.json
@@ -75,20 +75,19 @@
     },
     "dependencies": {
         "koa": "^2.13.4",
-        "koatty_config": "^1.0.4",
+        "koatty_config": "^1.0.6",
         "koatty_container": "^1.6.10",
         "koatty_core": "^1.3.38",
         "koatty_exception": "^1.0.6",
-        "koatty_lib": "^1.2.6",
+        "koatty_lib": "^1.2.8",
         "koatty_loader": "^1.0.2",
         "koatty_logger": "^1.2.12",
         "koatty_payload": "^1.3.10",
-        "koatty_router": "^1.5.12",
+        "koatty_router": "^1.5.14",
         "koatty_serve": "^1.3.10",
-        "koatty_trace": "^1.4.26",
+        "koatty_trace": "^1.4.30",
         "reflect-metadata": "^0.1.13",
-        "tslib": "^2.3.1",
-        "uuid": "^8.3.2"
+        "tslib": "^2.3.1"
     },
     "husky": {
         "hooks": {
