--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "version": "3.5.11",
     "description": "Koa2 + Typescript = koatty. Use Typescript's decorator implement auto injection.",
     "scripts": {
-        "build": "del-cli --force dist && tsc",
+        "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
+        "build:cp": "node scripts/postBuild && copyfiles package.json LICENSE README.md dist/",
+        "build:js": "del-cli --force dist && npx rollup -c",
+        "build:doc": "del-cli --force docs/api && npx api-documenter markdown --input temp --output docs/api",
+        "build:dts": "del-cli --force lib && npx tsc && npx api-extractor run --local --verbose && del-cli --force lib",
         "eslint": "eslint --ext .ts,.js ./",
         "prepublishOnly": "npm test && npm run build",
         "release": "npm run prepublishOnly && standard-version",
@@ -13,21 +17,18 @@
         "version": "conventional-changelog -p angular -i CHANGELOG.md -s"
     },
     "main": "./dist/index.js",
+    "exports": {
+        "require": "./index.js",
+        "import": "./index.mjs"
+    },
+    "typings": "index.d.ts",
+    "directories": {
+        "doc": "docs"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/thinkkoa/koatty.git"
     },
-    "keywords": [
-        "web",
-        "typescript",
-        "framework",
-        "mvc",
-        "koa2",
-        "restful",
-        "agile",
-        "koatty",
-        "thinkkoa"
-    ],
     "engines": {
         "node": ">12.0.0"
     },
@@ -47,12 +48,9 @@
         }
     ],
     "devDependencies": {
-        "@babel/core": "^7.x.x",
-        "@babel/plugin-proposal-decorators": "^7.x.x",
-        "@babel/preset-env": "^7.x.x",
-        "@babel/preset-typescript": "^7.x.x",
-        "@commitlint/cli": "^12.x.x",
-        "@commitlint/config-conventional": "^15.x.x",
+        "@microsoft/api-documenter": "^7.x.x",
+        "@microsoft/api-extractor": "^7.x.x",
+        "@rollup/plugin-json": "^4.x.x",
         "@types/jest": "^27.x.x",
         "@types/koa": "^2.x.x",
         "@types/koa__router": "^8.0.9",
@@ -61,13 +59,18 @@
         "@types/ws": "^8.2.0",
         "@typescript-eslint/eslint-plugin": "^5.x.x",
         "@typescript-eslint/parser": "^5.x.x",
+        "commitlint": "^15.x.x",
+        "commitlint-config-gitmoji": "^2.x.x",
         "conventional-changelog-cli": "^2.x.x",
+        "copyfiles": "^2.x.x",
         "del-cli": "^4.x.x",
         "eslint": "^8.x.x",
         "eslint-plugin-jest": "^25.x.x",
         "husky": "^7.x.x",
         "jest": "^27.x.x",
         "jest-html-reporters": "^2.x.x",
+        "rollup": "^2.x.x",
+        "rollup-plugin-typescript2": "^0.x.x",
         "standard-version": "^9.x.x",
         "ts-jest": "^27.x.x",
         "ts-node": "^10.x.x",
@@ -84,14 +87,9 @@
         "koatty_logger": "^1.2.12",
         "koatty_payload": "^1.3.10",
         "koatty_router": "^1.5.14",
-        "koatty_serve": "^1.3.10",
+        "koatty_serve": "^1.3.11",
         "koatty_trace": "^1.4.30",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.1"
-    },
-    "husky": {
-        "hooks": {
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-        }
     }
 }
