--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     },
     "main": "./dist/index.js",
     "exports": {
-        "require": "./index.js",
-        "import": "./index.mjs"
+        "require": "./dist/index.js",
+        "import": "./dist/index.mjs"
     },
     "directories": {
         "doc": "docs"
