--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
         }
     ],
     "devDependencies": {
+        "@commitlint/cli": "^12.x.x",
+        "@commitlint/config-conventional": "^15.x.x",
         "@microsoft/api-documenter": "^7.x.x",
         "@microsoft/api-extractor": "^7.x.x",
         "@rollup/plugin-json": "^4.x.x",
@@ -57,11 +59,10 @@
         "@types/koa": "^2.x.x",
         "@types/koa__router": "^8.x.x",
         "@types/node": "^16.x.x",
+        "@types/supertest": "^2.x.x",
         "@types/ws": "^8.x.x",
         "@typescript-eslint/eslint-plugin": "^5.x.x",
         "@typescript-eslint/parser": "^5.x.x",
-        "commitlint": "^11.x.x",
-        "commitlint-config-gitmoji": "^2.x.x",
         "conventional-changelog-cli": "^2.x.x",
         "copyfiles": "^2.x.x",
         "del-cli": "^4.x.x",
@@ -70,10 +71,14 @@
         "husky": "^4.x.x",
         "jest": "^27.x.x",
         "jest-html-reporters": "^2.x.x",
+        "koatty_cacheable": "^1.x.x",
+        "koatty_schedule": "^1.x.x",
+        "koatty_store": "^1.x.x",
         "koatty_validation": "^1.x.x",
         "rollup": "^2.x.x",
         "rollup-plugin-typescript2": "^0.x.x",
         "standard-version": "^9.x.x",
+        "supertest": "^6.x.x",
         "ts-jest": "^27.x.x",
         "ts-node": "^10.x.x",
         "typescript": "^4.x.x"
@@ -82,15 +87,15 @@
         "koa": "2.13.4",
         "koatty_config": "1.1.2",
         "koatty_container": "1.7.7",
-        "koatty_core": "1.6.1",
+        "koatty_core": "1.6.4",
         "koatty_exception": "1.2.6",
         "koatty_lib": "1.2.10",
         "koatty_loader": "1.0.2",
         "koatty_logger": "1.3.12",
-        "koatty_payload": "1.3.15",
+        "koatty_payload": "1.3.16",
         "koatty_proto": "1.1.6",
-        "koatty_router": "1.7.3",
-        "koatty_serve": "1.4.8",
+        "koatty_router": "1.7.5",
+        "koatty_serve": "1.4.9",
         "koatty_trace": "1.6.6",
         "reflect-metadata": "0.1.13",
         "tslib": "2.3.1"
