--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npm run build:js && npm run build:dts && npm run build:doc && npm run build:cp",
     "build:cp": "node scripts/postBuild && copyfiles package.json LICENSE README.md dist/",
-    "build:js": "del-cli --force dist && npx rollup -c",
+    "build:js": "del-cli --force dist && npx rollup -c .rollup.config.js",
     "build:doc": "del-cli --force docs/api && npx api-documenter markdown --input temp --output docs/api",
     "build:dts": "del-cli --force temp && npx tsc && npx api-extractor run --local --verbose",
     "eslint": "eslint --ext .ts,.js ./",
@@ -50,54 +50,48 @@
     }
   ],
   "devDependencies": {
-    "@commitlint/cli": "^12.x.x",
-    "@commitlint/config-conventional": "^15.x.x",
+    "@commitlint/cli": "^17.x.x",
+    "@commitlint/config-conventional": "^17.x.x",
     "@microsoft/api-documenter": "^7.x.x",
     "@microsoft/api-extractor": "^7.x.x",
     "@rollup/plugin-json": "^4.x.x",
     "@types/jest": "^27.x.x",
     "@types/koa": "^2.x.x",
-    "@types/koa__router": "^8.x.x",
+    "@types/koa__router": "^8.0.11",
     "@types/node": "^16.x.x",
-    "@types/supertest": "^2.x.x",
-    "@types/ws": "^8.x.x",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.x.x",
     "@typescript-eslint/parser": "^5.x.x",
     "conventional-changelog-cli": "^2.x.x",
     "copyfiles": "^2.x.x",
     "del-cli": "^4.x.x",
     "eslint": "^8.x.x",
-    "eslint-plugin-jest": "^25.x.x",
+    "eslint-plugin-jest": "^26.x.x",
     "husky": "^4.x.x",
-    "jest": "^27.x.x",
-    "jest-html-reporters": "^2.x.x",
-    "koatty_cacheable": "^1.x.x",
-    "koatty_schedule": "^1.x.x",
-    "koatty_store": "^1.x.x",
-    "koatty_validation": "^1.x.x",
+    "jest": "^28.x.x",
+    "jest-html-reporters": "^3.x.x",
     "rollup": "^2.x.x",
     "rollup-plugin-typescript2": "^0.x.x",
     "standard-version": "^9.x.x",
-    "supertest": "^6.x.x",
-    "ts-jest": "^27.x.x",
+    "ts-jest": "^28.x.x",
     "ts-node": "^10.x.x",
     "typescript": "^4.x.x"
   },
   "dependencies": {
     "koa": "2.13.4",
-    "koatty_config": "1.1.2",
-    "koatty_container": "1.7.7",
-    "koatty_core": "1.6.5",
-    "koatty_exception": "1.2.6",
-    "koatty_lib": "1.2.10",
-    "koatty_loader": "1.0.2",
-    "koatty_logger": "1.3.12",
-    "koatty_payload": "1.3.17",
-    "koatty_proto": "1.1.6",
-    "koatty_router": "1.7.5",
-    "koatty_serve": "1.4.9",
-    "koatty_trace": "1.6.6",
+    "koatty_config": "1.1.5",
+    "koatty_container": "1.7.10",
+    "koatty_core": "1.6.8",
+    "koatty_exception": "1.2.7",
+    "koatty_lib": "1.2.11",
+    "koatty_loader": "1.0.3",
+    "koatty_logger": "1.3.14",
+    "koatty_payload": "1.3.18",
+    "koatty_proto": "1.1.8",
+    "koatty_router": "1.7.6",
+    "koatty_serve": "1.4.10",
+    "koatty_trace": "1.6.7",
     "reflect-metadata": "0.1.13",
-    "tslib": "2.3.1"
+    "tslib": "2.4.0"
   }
 }
