fix: ctx.body未赋值导致的404

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "TS Program",
+            "name": "Koatty Test Program",
             "args": [
                 "${workspaceRoot}/demo/src/App.ts"
             ],
