--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "@rollup/plugin-json": "^4.x.x",
     "@types/jest": "^27.x.x",
     "@types/koa": "^2.x.x",
-    "@types/koa__router": "^8.0.11",
+    "@types/koa__router": "^8.x.x",
     "@types/node": "^16.x.x",
-    "@types/ws": "^8.5.3",
+    "@types/ws": "^8.x.x",
     "@typescript-eslint/eslint-plugin": "^5.x.x",
     "@typescript-eslint/parser": "^5.x.x",
     "conventional-changelog-cli": "^2.x.x",
@@ -71,6 +71,7 @@
     "husky": "^4.x.x",
     "jest": "^28.x.x",
     "jest-html-reporters": "^3.x.x",
+    "koa-session": "^6.2.0",
     "rollup": "^2.x.x",
     "rollup-plugin-typescript2": "^0.x.x",
     "standard-version": "^9.x.x",
@@ -82,16 +83,16 @@
     "koa": "2.13.4",
     "koatty_config": "1.1.5",
     "koatty_container": "1.7.10",
-    "koatty_core": "1.6.8",
+    "koatty_core": "1.6.9",
     "koatty_exception": "1.2.7",
     "koatty_lib": "1.2.12",
     "koatty_loader": "1.0.3",
     "koatty_logger": "1.3.14",
     "koatty_payload": "1.3.18",
-    "koatty_proto": "1.1.8",
-    "koatty_router": "1.7.9",
-    "koatty_serve": "1.4.11",
-    "koatty_trace": "1.6.9",
+    "koatty_proto": "^1.1.9",
+    "koatty_router": "1.7.12",
+    "koatty_serve": "1.4.12",
+    "koatty_trace": "1.6.10",
     "koatty_validation": "1.2.5",
     "reflect-metadata": "0.1.13",
     "tslib": "2.4.0"
