--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@microsoft/api-documenter": "^7.x.x",
     "@microsoft/api-extractor": "^7.x.x",
     "@rollup/plugin-json": "^6.x.x",
+    "@types/formidable": "^3.x.x",
     "@types/jest": "^29.x.x",
     "@types/koa": "^2.x.x",
     "@types/koa__router": "^12.x.x",
