--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     }
   ],
   "devDependencies": {
-    "@commitlint/cli": "^18.x.x",
-    "@commitlint/config-conventional": "^18.x.x",
+    "@commitlint/cli": "^19.x.x",
+    "@commitlint/config-conventional": "^19.x.x",
     "@microsoft/api-documenter": "^7.x.x",
     "@microsoft/api-extractor": "^7.x.x",
     "@rollup/plugin-json": "^6.x.x",
@@ -60,15 +60,15 @@
     "@types/jest": "^29.x.x",
     "@types/koa": "^2.x.x",
     "@types/koa__router": "^12.x.x",
-    "@types/node": "^20.x.x",
+    "@types/node": "^22.x.x",
     "@types/ws": "^8.x.x",
-    "@typescript-eslint/eslint-plugin": "^6.x.x",
-    "@typescript-eslint/parser": "^6.x.x",
-    "conventional-changelog-cli": "^4.x.x",
+    "@typescript-eslint/eslint-plugin": "^8.x.x",
+    "@typescript-eslint/parser": "^8.x.x",
+    "conventional-changelog-cli": "^5.x.x",
     "copyfiles": "^2.x.x",
-    "del-cli": "^5.x.x",
+    "del-cli": "^6.x.x",
     "eslint": "^8.x.x",
-    "eslint-plugin-jest": "^27.x.x",
+    "eslint-plugin-jest": "^28.x.x",
     "husky": "^4.x.x",
     "jest": "^29.x.x",
     "jest-html-reporters": "^3.x.x",
@@ -83,6 +83,7 @@
   },
   "dependencies": {
     "koa": "~2.15.3",
+    "koatty": "file:",
     "koatty_config": "~1.1.6",
     "koatty_container": "~1.8.10",
     "koatty_core": "~1.9.0",
