--- a/package.json
+++ b/package.json
@@ -56,12 +56,10 @@
     "@microsoft/api-documenter": "^7.x.x",
     "@microsoft/api-extractor": "^7.x.x",
     "@rollup/plugin-json": "^6.x.x",
-    "@types/formidable": "^3.x.x",
     "@types/jest": "^29.x.x",
     "@types/koa": "^2.x.x",
     "@types/koa__router": "^12.x.x",
     "@types/node": "^22.x.x",
-    "@types/ws": "^8.x.x",
     "@typescript-eslint/eslint-plugin": "^8.x.x",
     "@typescript-eslint/parser": "^8.x.x",
     "conventional-changelog-cli": "^5.x.x",
@@ -83,18 +81,17 @@
   },
   "dependencies": {
     "koa": "~2.15.3",
-    "koatty": "file:",
     "koatty_config": "~1.1.6",
     "koatty_container": "~1.8.10",
-    "koatty_core": "~1.9.0",
-    "koatty_exception": "~1.4.2",
+    "koatty_core": "~1.10.0-6",
+    "koatty_exception": "~1.4.4-0",
     "koatty_lib": "~1.3.4",
     "koatty_loader": "~1.1.0",
-    "koatty_logger": "~2.1.4",
-    "koatty_proto": "~1.1.13",
-    "koatty_router": "~1.9.2",
-    "koatty_serve": "~2.1.5",
+    "koatty_logger": "~2.1.6",
+    "koatty_proto": "~1.1.14",
+    "koatty_router": "~1.10.0-0",
+    "koatty_serve": "~2.1.6-0",
     "koatty_trace": "~1.12.3",
-    "koatty_validation": "~1.3.2"
+    "koatty_validation": "~1.3.4"
   }
 }
